Added a GUI for testing